// Copyright 2025 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package cipd.impl.vsa;

option go_package = "go.chromium.org/luci/cipd/appengine/impl/vsa/api";

import "go.chromium.org/luci/common/bq/pb/options.proto";

// VerifySoftwareArtifactLogEntry defines a schema for `vsa` BigQuery table.
//
// Field types must be compatible with BigQuery Storage Write API, see
// https://cloud.google.com/bigquery/docs/supported-data-types
message VerifySoftwareArtifactLogEntry {
  // CIPD package or package prefix.
  string package = 1;
  // CIPD instance ID.
  string instance = 2;
  // Resource uri for verification.
  string resource_uri = 3;

  // Whether the package is allowed by VerifySoftwareArtifact.
  bool allowed = 4;
  // The reason package is not 'allowed'.
  string rejection_message = 5;

  // Error occurred during the verification process.
  string error_message = 6;
  // Microseconds since epoch
  int64 timestamp = 7 [(bqschema.options).bq_type = "TIMESTAMP"];
}
